# malloy_sim

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/nbody_terminal/: main.cpp
docs/: 00_START_HERE.md  01_V3_ARCHITECTURE_DECISION.md  02_MILESTONE_ROADMAP_M1_M5.md  03_MODULE_BOUNDARIES.md  04_NUMERIC_AND_PHYSICS_CONVENTIONS.md  05_TESTING_STRATEGY.md  06_CMAKE_AND_VSCODE_WORKFLOW.md  07_POST_M5_ROADMAP.md  08_AI_HANDOFF_PROMPT.md  09_MISTAKES_TO_AVOID.md  10_CHANGELOG_TEMPLATE.md
docs/decisions/: 0001-cpp20-cmake-msvc.md  0002-terminal-first.md  0003-no-catch2-before-m5.md  0004-sim-core-scope.md  0005-normalized-units.md
include/malloy/math/: math.hpp  real.hpp  vec2.hpp
include/malloy/nbody/: body2d.hpp  diagnostics.hpp  nbody.hpp  nbody_settings.hpp  nbody_world.hpp
include/malloy/scenario/: scenario.hpp
include/malloy/sim_core/: sim_core.hpp
include/malloy/time/: fixed_step.hpp
scenarios/: three_body_triangle.scn  two_body.scn
src/nbody/: nbody.cpp
src/scenario/: scenario.cpp
src/sim_core/: sim_core.cpp
tests/: test_check.hpp
tests/math/: vec2_tests.cpp
tests/nbody/: nbody_world_tests.cpp
tests/scenario/: scenario_tests.cpp
tests/sim_core/: sim_core_tests.cpp
tests/smoke/: smoke_tests.cpp
tests/time/: fixed_step_tests.cpp
